Fri Jan 26 11:18:15 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/Makefile.bor (TESTS): Added Message_Queue_Test_Ex.cpp.

Fri Jan 26 13:37:30 2001  Luther J Baker  <luther@cs.wustl.edu>

	* ace/OS.h:

	  If using PACE, ACE_stat typedefs to pace_stat_s.

Fri Jan 26 11:18:15 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/Message_Queue_Test_Ex.cpp: Fixed some ASYS_* macros with
	  ACE_* stuff.  Thanks to Darrell for reporting this.

	* ace/Message_Queue_T.h,
  	* ace/Message_Queue_T.i,
  	* ace/Message_Queue_T.cpp:
	  Added the ACE_Message_Queue_Ex, which provides a message queue
	  abstraction whose type is templatized.  Thanks to Michael Vitlo
	  <mvitalo@sprynet.com> for contributing this.

	* tests/run_tests.lst: 
  	* tests/run_test.lst: 
	* tests: Added support for the new Message_Queue_Test_Ex.cpp file.
	  Thanks to Michael Vitlo <mvitalo@sprynet.com> for contributing
	  this. 

Fri Jan 26 09:33:20 2001  Carlos O'Ryan  <coryan@uci.edu>

	* bin/auto_run_tests.lst:
	  Add TAO/tests/Object_Loader to the list

	* include/makeinclude/rules.lib.GNU:
	  Allow both .cpp and .c files in the LSRC macro.  This should
	  let the PACE guys use the real name for their files, and
	  generate proper dependencies.

Fri Jan 26 02:16:42 2001  Darrell Brunsch <brunsch@uci.edu>

        * tests/OS_Test.cpp:

          Changed a use of struct stat to ACE_stat.

Thu Jan 25 19:16:48 2001  Ossama Othman  <ossama@uci.edu>

	* ace/config-linux.h:

	  Only define ACE_LACKS_NETDB_REENTRANT_FUNCTIONS and
	  ACE_LACKS_THREAD_STACK_SIZE for glibc < 2.1.  glibc 2.1+ has the
	  netdb reentrant functions (albeit with funky signatures), and it
	  has pthread_attr_setstacksize().

	* ace/OS.h:

	  Removed trailing whitespace.

	* ace/OS.i (getprotobyname_r, getprotobynumber_r, gethostbyaddr_r,
	  gethostbyname_r, getservbyname_r):

	  Added glibc-specific calls to these functions.  This allows us
	  to avoid grabbing a lock! Thanks to Ben Strong