@@ -1,5 +1,11 @@
 Fri Jan 26 11:18:15 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
 
+	* ace/SOCK_Dgram_Mcast.cpp (open): Modified the call to
+	  ACE_SOCK_Dgram::shared_open() to just pass in this->mcast_
+ 	  rather than making a local copy that just contained the port
+ 	  number.  Thanks to Keith Nicewarner <knicewar@erg.sri.com> for
+ 	  reporting this.
+
 	* tests/Makefile.bor (TESTS): Added Message_Queue_Test_Ex.cpp.
 
 Fri Jan 26 13:37:30 2001  Luther J Baker  <luther@cs.wustl.edu>
